# HSI-Nerfstudio

./: .gitignore  README.md  pyproject.toml
HSINerf/: HSI_config_dataparser.py  HSI_config_method.py  HSI_datamanager.py  HSI_dataparser.py  HSI_dataset.py  HSI_model.py  HSI_model_mip.py  HSI_pipeline.py  HSI_trainer.py  HSI_utils.py  README.md
HSINerf/scripts/: HSI_eval.py  HSI_render.py  HSI_train.py  HSI_viewer.py
notebooks/: Example_Analysis.ipynb  Paper_plots.ipynb
renders/paper/: combine_render.sh
scripts/: JSTAR.sh  benchmark_time.sh  format_transforms.sh  render_example_models.sh  train_all_models.sh
